--- a/index.html
+++ b/index.html
@@ -10,28 +10,20 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 <link rel="stylesheet" href="css/styles.css">
 <body>
-<div class="container" id="main">
+<div class="container center" id="main">
     <div id="header">
 </div>
     <img src="img/land.png" id=landing>
 </div>
 <div id="social" class="container center">
-
-<div class="col-md-4">
-    <img src="img/twit.jpg" id="glyph"><h3>@michaelbellino</h3>
-</div>
-
-<div class="col-md-4">
-    <img src="img/insta.jpg" id="glyph"><h3>@michaelbellino</h3>
-</div>
-
-<div class="col-md-4">
-    <img src="img/linkd.jpg" id="glyph"><h3>@michaelbellino</h3>
-</div>
+    <a href="http://twitter.com/_mikebellino" target="_blank"><img class="center" src="img/twit.png" id="glyphs"></a> <a href="http://linkedin.com/in/michaelbellino" target="_blank"><img class="center" src="img/linkd.png" id="glyphs"></a> <a href="http://facebook.com/michael.bellino.3" target="_blank"><img class="center" src="img/fb.png" id="glyphs"></a>
 
 </div>
 </body>
 <div class="container center" id="footer">
+    <br>
+    <br>
+    <br>  
     <p class="text-center">Created by Michael Bellino. Hosted via <a href="http://github.com">Github.</a></p>
 </div>
 </html>
