--- a/index.html
+++ b/index.html
@@ -14,18 +14,24 @@
     <div id="header">
 </div>
     <img src="img/land.png" id=landing>
+<div class="center">
+    <iframe class="" style="width:100%; height:1000px;" src="https://www.cognitoforms.com/MjbMediaLlc/pleasefeelfreetocontactmebelow"></iframe> 
+</div>
+
 </div>
 <div id="social" class="container center">
     <a href="http://twitter.com/_mikebellino" target="_blank"><img class="center" src="img/twit.png" id="glyphs"></a> <a href="http://linkedin.com/in/michaelbellino" target="_blank"><img class="center" src="img/linkd.png" id="glyphs"></a> <a href="http://facebook.com/michael.bellino.3" target="_blank"><img class="center" src="img/fb.png" id="glyphs"></a>
+<br>
+<br>
+<br>
+<br>
 
+
+    <br>
 </div>
 </body>
 <div class="container center" id="footer">
-    <br>
-    <br>
-    <br>
-    <br>
     <br>  
-    <p class="text-center">Created by Michael Bellino. Hosted via <a href="http://github.com">Github.</a></p>
+    <p class="text-center">Created by Michael Bellino. Hosted via <a target="_blank" href="http://github.com">Github.</a></p>
 </div>
 </html>
