--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </div>
     <img src="img/land.png" id=landing>
 <div class="center">
-    <iframe class="" style="width:100%; height:1000px;" src="https://www.cognitoforms.com/MjbMediaLlc/pleasefeelfreetocontactmebelow"></iframe> 
+    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSecbqQqCTFyZ579pcFJPDx3exldyI9lkA9b1C4ceRJ8XVSoaw/viewform?embedded=true" width="700" height="520" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
 </div>
 
 </div>
