--- a/index.html
+++ b/index.html
@@ -14,24 +14,18 @@
     <div id="header">
 </div>
     <img src="img/land.png" id=landing>
-<div class="center">
-    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSecbqQqCTFyZ579pcFJPDx3exldyI9lkA9b1C4ceRJ8XVSoaw/viewform?embedded=true" width="1000" height="640" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
-</div>
-
 </div>
 <div id="social" class="container center">
     <a href="http://twitter.com/_mikebellino" target="_blank"><img class="center" src="img/twit.png" id="glyphs"></a> <a href="http://linkedin.com/in/michaelbellino" target="_blank"><img class="center" src="img/linkd.png" id="glyphs"></a> <a href="http://facebook.com/michael.bellino.3" target="_blank"><img class="center" src="img/fb.png" id="glyphs"></a>
-<br>
-<br>
-<br>
-<br>
-
-
-    <br>
 </div>
+<div class="center">
+    <iframe id="contact" src="https://docs.google.com/forms/d/e/1FAIpQLSecbqQqCTFyZ579pcFJPDx3exldyI9lkA9b1C4ceRJ8XVSoaw/viewform?embedded=true" width="60%" height="520px" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+ </div>
+
+ <br>
 </body>
 <div class="container center" id="footer">
     <br>  
-    <p class="text-center">Created by Michael Bellino. Hosted via <a target="_blank" href="http://github.com">Github.</a></p>
+    <p class="text-center">MJB Media LLC. &copy; Created by Michael Bellino. Hosted via <a target="_blank" href="http://github.com">Github.</a></p>
 </div>
 </html>
