--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <div id="social" class="container center">
     <a href="http://twitter.com/_mikebellino" target="_blank"><img class="center" src="img/twit.png" id="glyphs"></a> <a href="http://linkedin.com/in/michaelbellino" target="_blank"><img class="center" src="img/linkd.png" id="glyphs"></a> <a href="http://facebook.com/michael.bellino.3" target="_blank"><img class="center" src="img/fb.png" id="glyphs"></a>
 </div>
-<div class="center">
+<div class="container center">
     <iframe id="contact" src="https://docs.google.com/forms/d/e/1FAIpQLSecbqQqCTFyZ579pcFJPDx3exldyI9lkA9b1C4ceRJ8XVSoaw/viewform?embedded=true" width="60%" height="520px" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
  </div>
 
