--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
 <!-- Latest compiled and minified JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 <link rel="stylesheet" href="css/styles.css">
-<body>
+<body class="container center">
 <div class="container center" id="main">
-    <div id="header">
+    <div class="center" id="header">
 </div>
     <img src="img/land.png" id=landing>
 </div>
 <div id="social" class="container center">
-    <a href="http://twitter.com/_mikebellino" target="_blank"><img class="center" src="img/twit.png" id="glyphs"></a> <a href="http://linkedin.com/in/michaelbellino" target="_blank"><img class="center" src="img/linkd.png" id="glyphs"></a> <a href="http://facebook.com/michael.bellino.3" target="_blank"><img class="center" src="img/fb.png" id="glyphs"></a>
+    <a href="https://www.instagram.com/mikejbellinomedia/" target="_blank"><img class="center" src="img/insta.png" id="glyphs"></a> <a href="http://linkedin.com/in/michaelbellino" target="_blank"><img class="center" src="img/linkd.png" id="glyphs"></a>  <a href="http://fb.me/mikejbellinomedia" target="_blank"><img class="center" src="img/fb.png" id="glyphs"></a>
 </div>
-<div class="container center">
+<div id="contactbox" class="container center">
     <iframe id="contact" src="https://docs.google.com/forms/d/e/1FAIpQLSecbqQqCTFyZ579pcFJPDx3exldyI9lkA9b1C4ceRJ8XVSoaw/viewform?embedded=true" width="60%" height="520px" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
  </div>
 
