--- a/help.html
+++ b/help.html
@@ -17,7 +17,7 @@
 </div>
 <div id="social" class="container center">
     <a href="https://www.instagram.com/mikejbellinomedia/" target="_blank"><img class="center" src="img/insta.png" id="glyphs"></a> <a href="http://linkedin.com/in/michaelbellino" target="_blank"><img class="center" src="img/linkd.png" id="glyphs"></a>  <a href="http://fb.me/mikejbellinomedia" target="_blank"><img class="center" src="img/fb.png" id="glyphs"></a>
-<div class="container center"><!-- TeamViewer Logo (generated at https://www.teamviewer.com) -->
+<br><div class="container center"><!-- TeamViewer Logo (generated at https://www.teamviewer.com) -->
 <div style="position:relative; width:234px; height:60px;">
     <a href="http://www.teamviewer.com/link/?url=505374&id=309381424" style="text-decoration:none;">
       <img src="http://www.teamviewer.com/link/?url=985962&id=309381424" alt="TeamViewer for Remote Support" title="TeamViewer for Remote Support" border="0" width="234" height="60" />
@@ -29,6 +29,7 @@
       </div>
  <br>
 </body>
+<br>
 <div class="container center" id="footer">
     <br>  
     <p class="text-center">MJB Media LLC. &copy; Created by Michael Bellino. Hosted via <a target="_blank" href="http://github.com">Github.</a></p>
