--- a/help.html
+++ b/help.html
@@ -17,7 +17,8 @@
 </div>
 <div id="social" class="container center">
     <a href="https://www.instagram.com/mikejbellinomedia/" target="_blank"><img class="center" src="img/insta.png" id="glyphs"></a> <a href="http://linkedin.com/in/michaelbellino" target="_blank"><img class="center" src="img/linkd.png" id="glyphs"></a>  <a href="http://fb.me/mikejbellinomedia" target="_blank"><img class="center" src="img/fb.png" id="glyphs"></a>
-<br>
+</div>
+    <br>
     <div class="container center"><!-- TeamViewer Logo (generated at https://www.teamviewer.com) -->
 <div style="position:relative; width:234px; height:60px;">
     <a href="http://www.teamviewer.com/link/?url=505374&id=309381424" style="text-decoration:none;">
