--- a/help.html
+++ b/help.html
@@ -10,7 +10,8 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 <link rel="stylesheet" href="css/styles.css">
 <body class="container center">
-<div class="container center" id="main">
+<div class="container" id="whole">
+    <div class="container center" id="main">
     <div class="center" id="header">
 </div>
     <img src="img/land.png" id=landing>
@@ -20,16 +21,16 @@
 </div>
     <br>
     <div class="container center"><!-- TeamViewer Logo (generated at https://www.teamviewer.com) -->
-<div style="position:relative; width:234px; height:60px;">
+<div align="center">
     <a href="http://www.teamviewer.com/link/?url=505374&id=309381424" style="text-decoration:none;">
       <img src="http://www.teamviewer.com/link/?url=985962&id=309381424" alt="TeamViewer for Remote Support" title="TeamViewer for Remote Support" border="0" width="234" height="60" />
-      <span style="position:absolute; top:23px; left:60px; display:block; cursor:pointer; color:#424242; font-family:Arial; font-size:12px; line-height:1.2em; font-weight:bold; text-align:center; width:169px;">
+      <span style="position:relative; top:-35px; left:10px; display:block; cursor:pointer; color:#424242; font-family:Arial; font-size:12px; line-height:1.2em; font-weight:bold; text-align:center; width:169px;">
         TeamViewer for your<br />Remote Support!
       </span>
     </a>
   </div>
-   
       </div>
+    </div>
  <br>
 </body>
     
