--- a/help.html
+++ b/help.html
@@ -20,16 +20,21 @@
     <a href="https://www.instagram.com/mikejbellinomedia/" target="_blank"><img class="center" src="img/insta.png" id="glyphs"></a> <a href="http://linkedin.com/in/michaelbellino" target="_blank"><img class="center" src="img/linkd.png" id="glyphs"></a>  <a href="http://fb.me/mikejbellinomedia" target="_blank"><img class="center" src="img/fb.png" id="glyphs"></a>
 </div>
     <br>
+   
+   
     <div class="container center"><!-- TeamViewer Logo (generated at https://www.teamviewer.com) -->
 <div align="center">
-    <a href="http://www.teamviewer.com/link/?url=505374&id=309381424" style="text-decoration:none;">
+    <a href="https://get.teamviewer.com/mjbmedia" style="text-decoration:none;">
       <img src="http://www.teamviewer.com/link/?url=985962&id=309381424" alt="TeamViewer for Remote Support" title="TeamViewer for Remote Support" border="0" width="234" height="60" />
       <span style="position:relative; top:-35px; left:10px; display:block; cursor:pointer; color:#424242; font-family:Arial; font-size:12px; line-height:1.2em; font-weight:bold; text-align:center; width:169px;">
-        TeamViewer for your<br />Remote Support!
+        Download my<br />Remote Support Helpdesk!
       </span>
     </a>
   </div>
       </div>
+      <div id="contactbox" class="container center">
+        <iframe id="contact" src="https://docs.google.com/forms/d/e/1FAIpQLSecbqQqCTFyZ579pcFJPDx3exldyI9lkA9b1C4ceRJ8XVSoaw/viewform?embedded=true" width="60%" height="520px" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+     </div>
     </div>
  <br>
 </body>
