--- a/help.html
+++ b/help.html
@@ -2,7 +2,7 @@
 <html>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.typekit.net/lgx3fyl.css">
-
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 <!-- Optional theme -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 
@@ -15,7 +15,7 @@
     <div class="center" id="header">
 </div>
     <img src="img/land.png" id=landing>
-</div>
+
 <div id="social" class="container center">
     <a href="https://www.instagram.com/mikejbellinomedia/" target="_blank"><img class="center" src="img/insta.png" id="glyphs"></a> <a href="http://linkedin.com/in/michaelbellino" target="_blank"><img class="center" src="img/linkd.png" id="glyphs"></a>  <a href="http://fb.me/mikejbellinomedia" target="_blank"><img class="center" src="img/fb.png" id="glyphs"></a>
 </div>
