--- a/help.html
+++ b/help.html
@@ -4,7 +4,7 @@
         <title>MJB Media</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.typekit.net/lgx3fyl.css">
-    <meta name="viewport" content="width=device-width">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 <!-- Optional theme -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 <link rel="icon" href="img/favicon.ico" type="image/x-icon">
@@ -17,9 +17,9 @@
 <div class="container" id="whole">
     <div class="container center" id="main">
     <div class="center" id="header">
-</div>
-    <img src="img/land.png" id=landing>
 
+    <img src="img/land.png" id=landing>
+</div>
 <div id="social" class="container center">
     <a href="https://www.instagram.com/mikejbellinomedia/" target="_blank"><img class="center" src="img/insta.png" id="glyphs"></a> <a href="http://linkedin.com/in/michaelbellino" target="_blank"><img class="center" src="img/linkd.png" id="glyphs"></a>  <a href="http://fb.me/mikejbellinomedia" target="_blank"><img class="center" src="img/fb.png" id="glyphs"></a>
 </div>
@@ -37,7 +37,7 @@
   </div>
       </div>
       <div id="contactbox" class="container center">
-        <iframe id="contact" src="https://docs.google.com/forms/d/e/1FAIpQLSemZA1Xn5H2TJ-5S9rgfHkqXjYrIjTlc4pG4m3volm4CIpqow/viewform?embedded=true" width="60%" height="520px" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+        <iframe id="tech" src="https://docs.google.com/forms/d/e/1FAIpQLSemZA1Xn5H2TJ-5S9rgfHkqXjYrIjTlc4pG4m3volm4CIpqow/viewform?embedded=true" width="60%" height="520px" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
      </div>
     </div>
  <br>
