--- a/help.html
+++ b/help.html
@@ -4,7 +4,7 @@
         <title>MJB Media</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.typekit.net/lgx3fyl.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <meta name="viewport" content="width=device-width, maximum-scale=1">
 <!-- Optional theme -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 <link rel="icon" href="img/favicon.ico" type="image/x-icon">
@@ -12,18 +12,17 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 <link rel="stylesheet" href="css/styles.css">
 
-</head>
-<body class="container center">
-<div class="container" id="whole">
-    <div class="container center" id="main">
-    <div class="center" id="header">
 
+</head>
+<body>
+<div class="container" id="main">
+    <div align="center" id="header">
     <img src="img/land.png" id=landing>
 </div>
-<div id="social" class="container center">
+</div>
+<div id="social" class="container" align="center">
     <a href="https://www.instagram.com/mikejbellinomedia/" target="_blank"><img class="center" src="img/insta.png" id="glyphs"></a> <a href="http://linkedin.com/in/michaelbellino" target="_blank"><img class="center" src="img/linkd.png" id="glyphs"></a>  <a href="http://fb.me/mikejbellinomedia" target="_blank"><img class="center" src="img/fb.png" id="glyphs"></a>
 </div>
-    <br>
    
    
     <div class="container center"><!-- TeamViewer Logo (generated at https://www.teamviewer.com) -->
